// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders design 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile___1-M3K"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile-view___1stZU src-shared-components-ChallengeTile-___style__DESIGN___Qvjqd"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3w5tT"
    >
      <header>
        <Link
          className="src-shared-components-ChallengeTile-___style__name___1jF7j"
          replace={false}
          to="/challenges/30051608"
        >
          <span>
            Sunshot - MapMySolar - SunGiver  - Brand Concept Logo Design Challenge
          </span>
        </Link>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___2AJaw"
        >
          LOGO DESIGN
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___22F18"
        >
          October 2015
        </p>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___CYUWj"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___3xZDW src-shared-components-ChallengeTile-___style__DATA_SCIENCE___1b8GD"
        >
          <div
            className="src-shared-components-ChallengeTile-___style__design-challenge-user-place___3v-1O"
          >
            <div
              className="src-shared-components-ChallengeTile-___style__tile-view___1stZU"
            >
              <p
                className="src-shared-components-ChallengeTile-___style__place___18eIV"
              >
                Passed Screening
              </p>
              <div
                className="src-shared-components-ChallengeTile-___style__thumbnail___2vRle"
              />
            </div>
          </div>
        </div>
        <p
          className="src-shared-components-ChallengeTile-___style__roles___1V-WA"
        >
          <span>
            <span>
              Role:  
            </span>
            <span>
              Submitter
            </span>
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders develop 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile___1-M3K"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile-view___1stZU src-shared-components-ChallengeTile-___style__DEVELOP___GgzgV"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3w5tT"
    >
      <header>
        <Link
          className="src-shared-components-ChallengeTile-___style__name___1jF7j"
          replace={false}
          to="/challenges/30060905"
        >
          <span>
            $100 Eaton PX 2.0 Petting Zoo - MDC Web Enhancement F2F Challenge
          </span>
        </Link>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___2AJaw"
        >
          FIRST 2 FINISH
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___22F18"
        >
          December 2017
        </p>
        <div
          className="src-shared-components-ChallengeTile-___style__winner-ribbon___321bD"
        >
          <WinnerRibbon
            height="26"
            viewBox="0 0 73 26"
            width="73"
            xmlns="http://www.w3.org/2000/svg"
          />
        </div>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___CYUWj"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___3xZDW src-shared-components-ChallengeTile-___style__DATA_SCIENCE___1b8GD"
        >
          <div
            className="src-shared-components-ChallengeTile-___style__dev-challenge-user-place___2tS8j"
          >
            <div
              className="src-shared-components-ChallengeTile-___style__tile-view___1stZU"
            >
              <p
                className="src-shared-components-ChallengeTile-___style__first-place___2-nh_ src-shared-components-ChallengeTile-___style__place___18eIV"
              >
                1
                <span>
                  st
                </span>
                 Place
              </p>
              <div
                className="src-shared-components-ChallengeTile-___style__challenge-score___2RKXS"
              >
                <p
                  className="src-shared-components-ChallengeTile-___style__score___pPbmo"
                >
                  100%
                </p>
                <p
                  className="src-shared-components-ChallengeTile-___style__last-child___10e2S"
                >
                  Review Score
                </p>
              </div>
            </div>
          </div>
        </div>
        <p
          className="src-shared-components-ChallengeTile-___style__roles___1V-WA"
        >
          <span>
            <span>
              Role:  
            </span>
            <span>
              Submitter
            </span>
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders marathon 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile___1-M3K"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___1vlh0 src-shared-components-ChallengeTile-___style__tile-view___1stZU src-shared-components-ChallengeTile-___style__DATA_SCIENCE___1b8GD"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3w5tT"
    >
      <header>
        <a
          className="src-shared-components-ChallengeTile-___style__name___1jF7j"
          href="https://community.topcoder.com/longcontest/stats/?module=ViewOverview&rd=17153"
        >
          2018 TCO Marathon
        </a>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___2AJaw"
        >
          MARATHON MATCH
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___22F18"
        >
          May 2018
        </p>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___CYUWj"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___3xZDW src-shared-components-ChallengeTile-___style__DATA_SCIENCE___1b8GD"
        >
          <div
            className="src-shared-components-ChallengeTile-___style__marathon-score___V-afd"
          >
            <p
              className="src-shared-components-ChallengeTile-___style__score___pPbmo"
            >
              996714.71
            </p>
            <p>
              Total Points
            </p>
          </div>
        </div>
        <p
          className="src-shared-components-ChallengeTile-___style__roles___1V-WA"
        />
      </div>
    </div>
  </div>
</div>
`;
